2009-07-16  Xiaomei Ji  <xji@chromium.org>

        Reviewed by Darin Adler.

        Fix tooltip does not get its directionality from its element's directionality.
        https://bugs.webkit.org/show_bug.cgi?id=24187

        Per mitz's suggestion in comment #6, while getting the plain-text 
        title, we also get the directionality of the title. How to handle 
        the directionality is up to clients. Clients could ignore it, 
        or use attribute or unicode control characters to display the title
        as what they want.


        * WebCoreSupport/ChromeClientQt.cpp:
        (WebCore::ChromeClientQt::setToolTip): Add directionality as 2nd parameter to setToopTip() (without handling it yet).
        * WebCoreSupport/ChromeClientQt.h: Add directionality as 2nd parameter to setToolTip().

2009-07-15  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Simon Hausmann.

        https://bugs.webkit.org/show_bug.cgi?id=27285

        When the user clicks a link with a target attribute, the newly created window should be visible.
        Make new windows created in Qtlauncher visible.

        * QtLauncher/main.cpp:
        (WebPage::createWindow):

2009-07-14  Adam Treat  <adam.treat@torchmobile.com>

        Reviewed by Zack Rusin.

        https://bugs.webkit.org/show_bug.cgi?id=26983

        The default constructed values for QSize and WebCore::IntSize are different.  The former
        produces an invalid size whereas the latter produces a size of zero.  This was causing
        a layout to be triggered when constructing a view and an assert to be hit.  This patch fixes
        the crash by taking care not to cause an unnecessary layout triggered by ScrollView::setFixedLayoutSize.

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::transitionToCommittedForNewPage):

2009-07-13  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Ariya Hidayat.
